# test-strip-analyzer

./: .gitignore  README.md  pyproject.toml
.codex/: agents.md  paper_implementation_plan.md  settings.local.json  tasks.md
.codex/docs/: current_state.md
data/: labels.csv
reports/: paper_results_summary.md
scripts/: build_synthetic_manifest.py  create_kfold_splits.py  debug_rule_based.py  generate_stylegan2_ada.py  paired_t_test.py  prepare_data.py  prepare_paper_splits.py  run_full_experiments.py  run_rule_based.py  summarize_paper_results.py  train_stylegan2_ada.py  visualize_augmentations.py
tests/training/: test_dataset.py  test_preprocessing.py  test_sampling.py
training/: train.py
training/dataset/: __init__.py  sampling.py  strip_dataset.py  transforms.py
training/evaluation/: __init__.py  metrics.py  statistics.py
training/features/: __init__.py  rule_based.py
training/models/: __init__.py  backbones.py  losses.py
training/preprocessing/: __init__.py  audit.py  background_removal.py  labels.py  splits.py
